apps/production/podinfo/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt
  name: podinfo-ingress
  namespace: podinfo
spec:
  rules:
  - host: podinfo.simonlk.dk
    http:
      paths:
      - pathType: Prefix
        path: /
        backend:
          service:
            name: podinfo
            port:
              number: 9898
  tls: # < placing a host in the TLS config will determine what ends up in the cert's subjectAltNames
  - hosts:
    - simonlk.dk
    secretName: podinfo-cert # < cert-manager will store the created certificate in this secret.
